@@ -2,21 +2,24 @@
 #define __TESTFWK_H   1
 
 extern int __numTests;
+extern const int __numCases;
+
+#ifndef NO_VARARGS
+void __printf(const char *szFormat, ...);
+#define LOG(_a)     __printf _a
+#else
+#define LOG(_a)     /* hollow log */
+#endif
 
 void __fail(const char *szMsg, const char *szCond, const char *szFile, int line);
-void __printf(const char *szFormat, ...);
+void __prints(const char *s);
+void __printn(int n);
+const char *__getSuiteName(void);
+void __runSuite(void);
 
 #define ASSERT(_a)  (__numTests++, (_a) ? (void)0 : __fail("Assertion failed", #_a, __FILE__, __LINE__))
-#define LOG(_a)     __printf _a
 #define FAIL()      FAILM("Failure")
 #define FAILM(_a)   __fail(_a, #_a, __FILE__, __LINE__)
-
-typedef void (*TESTFUNP)(void);
-
-// Provided by the suite
-TESTFUNP *suite(void);
-
-const char *getSuiteName(void);
 
 #define NULL  0
 
