@@ -1,7 +1,9 @@
 /** Test framework support functions.
  */
 #include <testfwk.h>
+#ifndef NO_VARARGS
 #include <stdarg.h>
+#endif
 
 #ifdef SDCC_ds390
 #include <tinibios.h> /* main() must see the ISR declarations */
@@ -20,6 +22,9 @@ void T2_isr (void) interrupt 5;
 extern void _putchar(char c);
 extern void _initEmu(void);
 extern void _exitEmu(void);
+
+int __numTests = 0;
+static int __numFailures = 0;
 
 #if BROKEN_DIV_MOD
 static int
@@ -46,8 +51,8 @@ __mod(int num, int denom)
 #define __mod(num, denom) ((num) % (denom))
 #endif
 
-static void
-_prints(const char *s)
+void
+__prints(const char *s)
 {
   char c;
 
@@ -57,8 +62,8 @@ _prints(const char *s)
   }
 }
 
-static void
-_printn(int n)
+void
+__printn(int n)
 {
   if (0 == n) {
     _putchar('0');
@@ -83,10 +88,11 @@ _printn(int n)
     if (neg)
       _putchar('-');
 
-    _prints(p);
+    __prints(p);
   }
 }
 
+#ifndef NO_VARARGS
 void
 __printf(const char *szFormat, ...)
 {
@@ -98,12 +104,12 @@ __printf(const char *szFormat, ...)
       switch (*++szFormat) {
       case 's': {
         char *sz = va_arg(ap, char *);
-        _prints(sz);
+        __prints(sz);
         break;
       }
       case 'u': {
         int i = va_arg(ap, int);
-        _printn(i);
+        __printn(i);
         break;
       }
       case '%':
@@ -121,9 +127,6 @@ __printf(const char *szFormat, ...)
   va_end(ap);
 }
 
-int __numTests = 0;
-static int __numFailures = 0;
-
 void
 __fail(const char *szMsg, const char *szCond, const char *szFile, int line)
 {
@@ -134,28 +137,65 @@ __fail(const char *szMsg, const char *szCond, const char *szFile, int line)
 int
 main(void)
 {
-  TESTFUNP *cases;
-  int numCases = 0;
-
   _initEmu();
 
-  __printf("--- Running: %s\n", getSuiteName());
+  __printf("--- Running: %s\n", __getSuiteName());
 
-  cases = suite();
-
-  while (*cases) {
-    __printf("Running %u\n", numCases);
-    (*cases)();
-    cases++;
-    numCases++;
-  }
+  __runSuite();
 
   __printf("--- Summary: %u/%u/%u: %u failed of %u tests in %u cases.\n",
-     __numFailures, __numTests, numCases,
-     __numFailures, __numTests, numCases
+     __numFailures, __numTests, __numCases,
+     __numFailures, __numTests, __numCases
      );
 
   _exitEmu();
 
   return 0;
 }
+#else
+void
+__fail(const char *szMsg, const char *szCond, const char *szFile, int line)
+{
+  __prints("--- FAIL: \"");
+  __prints(szMsg);
+  __prints("\" on ");
+  __prints(szCond);
+  __prints(" at ");
+  __prints(szFile);
+  _putchar(':');
+  __printn(line);
+  _putchar('\n');
+
+  __numFailures++;
+}
+
+int
+main(void)
+{
+  _initEmu();
+
+  __prints("--- Running: ");
+  __prints(__getSuiteName());
+  _putchar('\n');
+
+  __runSuite();
+
+  __prints("--- Summary: ");
+  __printn(__numFailures);
+  _putchar('/');
+  __printn(__numTests);
+  _putchar('/');
+  __printn(__numCases);
+  __prints(": ");
+  __printn(__numFailures);
+  __prints(" failed of ");
+  __printn(__numTests);
+  __prints(" tests in ");
+  __printn(__numCases);
+  __prints(" cases.\n");
+
+  _exitEmu();
+
+  return 0;
+}
+#endif
